k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-service
spec:
  type: LoadBalancer
  selector:
    app: gitops-app
  ports:
  - port: 80
    targetPort: 3000
